Fix column spacings with fr units

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,36 +12,23 @@ a {
 }
 
 @font-face {
-  font-family: 'FiraSans';
-  src: url('./assets/fonts/FiraSansCompressed-Light.ttf') format('truetype');
-  font-style: normal;
-  font-weight: 200;
-}
-
-@font-face {
-  font-family: 'FiraSans';
-  src: url('./assets/fonts/FiraSansCompressed-Medium.ttf') format('truetype');
-  font-style: normal;
+  font-family: 'Source Serif Pro';
   font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  src: url('./assets/fonts/SourceSerifPro/SourceSerifPro-Light.otf')
+      format('opentype'),
+    url('./assets/fonts/SourceSerifPro/SourceSerifPro-Light.ttf')
+      format('truetype');
 }
 
 @font-face {
-  font-family: 'FiraSans';
-  src: url('./assets/fonts/FiraSansCompressed-MediumItalic.ttf') format('truetype');
+  font-family: 'Source Serif Pro';
+  font-weight: 300;
   font-style: italic;
-  font-weight: 300;
-}
-
-@font-face {
-  font-family: 'FiraSans';
-  src: url('./assets/fonts/FiraSansCompressed-Italic.ttf') format('truetype');
-  font-style: italic;
-  font-weight: 300;
-}
-
-@font-face {
-  font-family: 'FiraSans';
-  src: url('./assets/fonts/FiraSansCompressed-Regular.ttf') format('');
-  font-style: normal;
-  font-weight: 500;
+  font-stretch: normal;
+  src: url('./assets/fonts/SourceSerifPro/SourceSerifPro-LightIt.otf')
+      format('opentype'),
+    url('./assets/fonts/SourceSerifPro/SourceSerifPro-LightIt.ttf')
+      format('truetype');
 }
